--- a/.github/workflows/bw.yml
+++ b/.github/workflows/bw.yml
@@ -24,9 +24,7 @@ jobs:
     - name: Install Bitwarden Secrets Manager CLI (bws)
       run: |
         BWS_VERSION="1.0.0" # adjust to current release
-        curl -L -o bws.zip "
-https://github.com/bitwarden/sdk/releases/download/bws-v${BWS_VERSION}/bws-aarch64-apple-darwin-${BWS_VERSION}.zip
-"
+        curl -L -o bws.zip "https://github.com/bitwarden/sdk/releases/download/bws-v${BWS_VERSION}/bws-aarch64-apple-darwin-${BWS_VERSION}.zip"
         unzip -q bws.zip -d /usr/local/bin
         chmod +x /usr/local/bin/bws
         bws --version
