--- a/.github/workflows/bw.yml
+++ b/.github/workflows/bw.yml
@@ -32,7 +32,7 @@ jobs:
       env:
         BWS_ACCESS_TOKEN: ${{ secrets.BW_ACCESS_TOKEN }}
       run: |
-        bws secret get 9bb4989-b39f-43a3-bc4d-b361011cbb23 >> $GITHUB_ENV
+        bws secret get e9bb4989-b39f-43a3-bc4d-b361011cbb23 >> $GITHUB_ENV
         bws secret get 165e90ae-bed4-41bb-9ec0-b361011ba441 >> $GITHUB_ENV
         bws secret get 2afaa8d6-cadf-45c9-bdbb-b361011ba3f0 >> $GITHUB_ENV
         bws secret get acef0f47-efa1-4036-9584-b361011ba349 >> $GITHUB_ENV
